--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         <nav class="nav d-flex justify-content-center">
       <a class="p-2 link-secondary" href="index.html">Main</a>
       <a class="p-2 link-secondary" href="form.html">Form</a>
+      <a class="p-2 link-secondary" href="blog.html">Blog</a>
     </nav>
   </header>
 </div>
